exams/exam01/maff_alpha/0-0-maff_alpha.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e3r4p9.42.fr
Darwin 14.5.0 x86_64
$> date
Fri Nov 27 17:43:30 CET 2015
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 7.0.0 (clang-700.1.76)
Target: x86_64-apple-darwin14.5.0
Thread model: posix
$> clang --version
Apple LLVM version 7.0.0 (clang-700.1.76)
Target: x86_64-apple-darwin14.5.0
Thread model: posix

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2015/piscine-c-formation-exam01/exam_20151127/acresap

= Git history ==================================================================
$> git -C /var/folders/nl/xjx7vd297wd35jbnk058pgsm0000gp/T/tmpBVA07V/user log --pretty='%H - %an, %ad : %s'
6d70fbeb553c87edcfccc7d6d32566d93d5929d2 - Exam 42, Fri Nov 27 17:42:13 2015 +0100 : commit of exam01
 
= Collected files ==========================================
$> ls -lAR /var/folders/nl/xjx7vd297wd35jbnk058pgsm0000gp/T/tmpBVA07V/user
total 8
-rw-r--r--  1 deepthought  deepthought  250 Nov 27 17:43 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought  102 Nov 27 17:43 maff_alpha

/var/folders/nl/xjx7vd297wd35jbnk058pgsm0000gp/T/tmpBVA07V/user/maff_alpha:
total 8
-rw-r--r--  1 deepthought  deepthought  1166 Nov 27 17:43 maff_alpha.c
 
= maff_alpha ===================================================================
$> clang -Wextra -Wall -Werror maff_alpha.c -o user_exe 
maff_alpha.c:30:4: error: expected expression
                        else (odd < Z)
                        ^
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
